@@ -1,6 +1,10 @@
 # ChangeLog for gentoo/src/catalyst 
 # Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.79 2004/08/31 01:40:24 zhen Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.80 2004/09/07 14:04:24 zhen Exp $
+
+  07 Sep 2004; John Davis <zhen@gentoo.org> modules/generic_stage_target.py,
+  modules/livecd_stage2_target.py:
+  fix for bug #63033, thanks to usata@gentoo.org for the patch
 
   30 Aug 2004; John Davis <zhen@gentoo.org>
   livecd/runscript-support/livecdfs-update.sh, targets/grp/grp-chroot.sh:
